@@ -5,6 +5,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Added
 
+* IS_SSHALLOWUSERS: also scan /etc/ssh/sshd_config.d
+
 ### Changed
 
 ### Deprecated
